--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,19 @@ input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-i
     -webkit-appearance: none;
     margin: 0;
 }
+
+a:link {
+    color: blue;
+}
+
+a:visited {
+    color: purple;
+}
+
+a:hover {
+    background-color: lightgreen;
+}
+
+.td {
+    padding: 0px;
+}
